@@ -55,15 +55,18 @@ Run `papr --help` for further information.
 
 ## Key shortcuts
 
+* h: Help / List of key bindings.
 * q / ESC: Quit.
 * ENTER: Open the paper in a PDF reader.
 * a: Show abstract for paper.
 * i / Arrow up: Move selection up.
 * k / Arrow down: Move selection down.
 * s: Live search in title.
-* r: Live serach in title via regular expression.
+* r: Live search in title via regular expression.
 * n: Edit notes.
 * t: Edit tags.
 * 0..5: Set voting.
 * y: Show all stored information about a paper.
 * l: Show statistics about tags.
+* f: Filter (e.g. by tags).
+* F: Clear filter.
