@@ -1,9 +1,7 @@
 * get latest papers from arxiv
-* filter by tags (e.g. show list of tags and select from this list)
+* refactoring of ui.py
 * filter by stars
-* trigram search
 * search in abstract
-* search tags
 * extract authors
 * extract years
 * time PDF added to the repository
