@@ -2,7 +2,7 @@
 class ScrollView:
     def __init__(self, n_elements, rows, selected):
         self.n_elemens = n_elements
-        self.rows = rows
+        self._rows = rows
         self._selected = selected    # selected is in [0..n_elements-1]
         self.first_element_in_view = max(0, n_elements - rows)
 
@@ -12,8 +12,8 @@ class ScrollView:
         self._selected = max(0, self._selected - 1)
 
     def down(self):
-        if self._selected == self.first_element_in_view + self.rows - 1:
-            self.first_element_in_view = min(self.first_element_in_view + 1, self.n_elemens - self.rows)
+        if self._selected == self.first_element_in_view + self._rows - 1:
+            self.first_element_in_view = min(self.first_element_in_view + 1, self.n_elemens - self._rows)
         self._selected = min(self._selected + 1, self.n_elemens - 1)
 
     def selected(self):
@@ -23,4 +23,7 @@ class ScrollView:
         return self.first_element_in_view
 
     def end(self):
-        return self.first_element_in_view + self.rows
+        return self.first_element_in_view + self._rows
+
+    def rows(self):
+        return self._rows
